Demonstrate switch expression